# get-image-spv

./: .README.md.html  CMakeLists.txt  Makefile  README.md  common.h  main.cpp  run_batch.sh  run_get_image.py
shaders/: compile_shaders.sh  frag.json  frag.spv  recipient.frag  recipient.vk.frag  recipient.vk.json  recipient.vk.spv  simple.frag  very_simple.frag
